--- a/index.qmd
+++ b/index.qmd
@@ -16,9 +16,8 @@
 本课程欢迎以及推荐大家大量使用AI辅助学习。
 
 1. AI工具就像新时代的计算器，行业中已经在大量使用。
-2. AI让编程变得前所未有地简单，但前提是你自己要懂行，最好你的能力高于AI。
-3. 因此，学习阶段仍需要你自己的努力。
-
+2. AI让编程变得前所未有地简单，但前提是你自己要懂，最好你的能力高于AI。
+3. 如果你提交一个自己看不懂的作业/成果，你的老师可能放过你，但你的老板肯定不会。
 
 ## 本课程的主要内容：
 
@@ -30,7 +29,7 @@
 
 专业部分：
 
-1. 金融类专业48学时版：最优组合、量化技术分析和交易策略初步
+1. 金融类专业：最优组合、量化技术分析和交易策略初步（包括其他增补和调整）
 
 其他：看教学情况适时调整。
 
