--- a/book_parts/python_basics/04-data-structures.qmd
+++ b/book_parts/python_basics/04-data-structures.qmd
@@ -279,14 +279,16 @@ print(sorted(words, key=lambda s: s[-1]))  # 按最后一个字母
 3. 创建一个名为my_list的列表，包含以下元素：1, 9, 3, 7。使用insert方法在9和3之间插入一个值为5的元素，然后创建一个变量max_value，将其赋值为列表中的最大值。
 
 4. 创建一个名为my_list的列表，包含以下元素：2.2, 3.3, 1.1, 4.4。使用remove方法删除元素1.1，然后创建一个变量min_value，将其赋值为列表中的最小值。
-   
+
 提交范例：
 
-注：
-1. 不用写你的个人信息。
-2. 不用把题目抄一遍
+注：不用把题目抄一遍
 
 ```{python}
+# Class：你的班级
+# Id：你的学号
+# Name：你的姓名
+
 # List 练习1
 # 练习题1
 # <这里写第1题的代码> 
